# openai_conversation_plus

./: .cursorrules  .gitattributes  .gitignore  .pre-commit-config.yaml  FUNCTION_CALLING_FIXES.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICK_FIX.md  README.md  SETUP_COMPLETE.md  __init__.py  agent.md  ai_agent_task_list.md  ai_task.py  config_flow.py  hacs.json  manifest.json  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  safari-fix.js  setup.py
.cursor/plans/: fix-responses-api-bugs-8175f18e.plan.md
.github/workflows/: hassfest.yaml  test.yml  validate.yaml
custom_component/openai_conversation_plus/: config_flow.py  const.py  entity.py  strings.json
custom_components/openai_conversation_plus/: __init__.py  ai_task.py  config_flow.py  const.py  conversation.py  entity.py  exceptions.py  helpers.py  manifest.json  services.py  services.yaml  strings.json
custom_components/openai_conversation_plus/translations/: ar.json  da.json  de.json  en.json  es.json  et.json  fi.json  fr.json  hu.json  it.json  ko.json  lt.json  nl.json  no.json  pl.json  pt-BR.json  pt.json  sv.json  uk.json  zh.json
docs/: QUICK_FIX.md  README.md  README_TESTING.md  TROUBLESHOOTING.md  VERSION_MANAGEMENT.md  background_agent_config.md  cursor_web_setup.md  frontend_dev_setup.sh  guide_openai_conversation-history.md  openai_conversation_plus_realtime_routing_plan.md  realtime_api_implementation_plan.md  run_tests.py  safari-fix.js  todo_list_add_mcp_textbox_guide.md
docs/Homeassistant/: home-assistant-conversation-api.md  home-assistant-llm-api.md
docs/OpenAI_api/: gpt-5-models.md  gpt-5-new-params-and-tools.md  gpt-5-prompt-guide.md  handling_function_calls_with_reasoning_models.md  migrate_to_response_api.md  response_api.md
docs/agent_examples/: README.md  energy_monitor.md  security_agent.md
examples/functions/add_item_to_list/: README.md
examples/functions/execute_services/: README.md
examples/functions/get_attributes/: README.md
examples/functions/get_events/: README.md
examples/functions/get_items_from_list/: README.md
examples/functions/play_track_on_media_player/: README.md
examples/functions/play_tts_message/: README.md
examples/functions/remove_item_from_list/: README.md
examples/functions/send_sms_by_name/: README.md
examples/mcp/: README.md
examples/prompts/: README.md
examples/prompts/device_control/: README.md
scripts/: README.md  merge_to_main.sh  show_main_files.sh  update_version.sh
tests/: __init__.py  conftest.py  test_ai_task.py  test_config_flow.py  test_init.py
(+4 files in other folders)
